webapp docker-compose done

--- a/Dockerfile.webapp
+++ b/Dockerfile.webapp
@@ -1,9 +1,10 @@
-FROM python:3.7.6-alpine3.10
+FROM python:3.7
 
-RUN apk update && apk add bash
 WORKDIR WebApp
 COPY WebApp .
 
-RUN mkdir ImageStore
-VOLUME ImageStore
+RUN pip3 install -r requirements.txt
 
+EXPOSE 8501
+
+CMD ["streamlit","run","webapp.py"]
